增加查看文件大小功能

--- a/docs/一些说明.md
+++ b/docs/一些说明.md
@@ -4,6 +4,8 @@
 - [x] 连接到服务器
 - [x] 登录
 - [x] 切换到被动模式
+- [x] 获取文件大小
+- [ ] 切换 ASCII 和 Binary 传输模式
 - [ ] 读取当前路径
 - [ ] 切换路径
 - [ ] 列出当前目录的文件
@@ -16,7 +18,6 @@
 - 上传文件相关
     - [x] 上传文件
     - [ ] 中途停止上传
-    - [ ] 中途暂停上传
 
 
 ### 图形界面
