增加 CWD 和 PWD 功能

--- a/docs/一些说明.md
+++ b/docs/一些说明.md
@@ -6,8 +6,8 @@
 - [x] 切换到被动模式
 - [x] 获取文件大小
 - [ ] 切换 ASCII 和 Binary 传输模式
-- [ ] 读取当前路径
-- [ ] 切换路径
+- [x] 读取当前路径
+- [x] 切换路径
 - [ ] 列出当前目录的文件
 - [ ] 重命名文件
 - 下载文件
