删除文件功能 & 重构代码 1. FTPSession 增加删除文件的功能 2. 编写 FTPSession::runProcedure，利用该函数可复用代码

--- a/docs/一些说明.md
+++ b/docs/一些说明.md
@@ -3,13 +3,14 @@
 ### FTP
 - [x] 连接到服务器
 - [x] 登录
-- [x] 切换到被动模式
-- [x] 获取文件大小
-- [ ] 切换 ASCII 和 Binary 传输模式
+- [x] 切换 ASCII 和 Binary 传输模式
+- [x] 切换到被动模式（PASV/EPSV）
 - [x] 读取当前路径
 - [x] 切换路径
 - [ ] 列出当前目录的文件
+- [x] 获取文件大小
 - [ ] 重命名文件
+- [x] 删除文件
 - 下载文件
     - [ ] 下载文件
     - [ ] 断点续传
