上传文件的断点续传功能

--- a/docs/一些说明.md
+++ b/docs/一些说明.md
@@ -7,7 +7,7 @@
 - [x] 切换到被动模式（PASV/EPSV）
 - [x] 读取当前路径
 - [x] 切换路径
-- [ ] 列出当前目录的文件
+- [x] 列出当前目录的文件
 - [x] 创建目录
 - [x] 删除目录
 - [x] 获取文件大小
@@ -17,14 +17,15 @@
     - [ ] 下载文件
     - [ ] 断点续传
     - [ ] 中途停止下载
-    - [ ] 中途暂停下载
 - 上传文件相关
     - [x] 上传文件
     - [x] 中途停止上传
     - [x] 上传进度
+    - [x] 断点续传
 
 
 ### 图形界面
+- [ ] 图形界面
 
 ## 说明
 对于 `FTPFunction.h` 里放的函数，由于访问网络属于耗时操作，所以不能放到主线程运行，否则会卡死界面。
