--- a/docs/文档.md
+++ b/docs/文档.md
@@ -1,6 +1,10 @@
 # 文档
 ## FTPSession
 ### 概述
+FTPSession 对象中存放着 FTP 控制连接，它封装了登录、列出文件名、改变工作目录、删除文件等操作，详见下面的“功能”小节。
+
+为了防止界面被卡死，FTPSession 的成员函数以异步的方式工作，运行结束后发射信号通知调用者。
+
 ### 初始化
 首先，创建一个对象。
 
@@ -103,9 +107,9 @@ se->connectAndLogin();
 `connectAndLogin`
 
 - 可从 `connectSucceeded(welcomeMsg)` 获得服务器的欢迎信息。
-- `loginSucceeded` 表示登录成功。命名为"xxxSucceeded"的信号都表示某项操作成功。
-- `connectFailedWithMsg(msg)` 和 `loginFailedWithMsg(msg)` 表示服务器消息中的返回码不符合预期。命名为"xxxFailedWithMsg"的信号皆是如此。
-- `connectFailed` 和 `loginFailed` 表示执行 `send` 或 `recv` 函数时出现了错误。命名为"xxxFailed"的信号皆是如此。
+- `loginSucceeded` 表示登录成功。命名为"xxx**Succeeded**"的信号都表示某项操作成功。
+- `connectFailedWithMsg(msg)` 和 `loginFailedWithMsg(msg)` 表示服务器消息中的返回码不符合预期。命名为"xxx**FailedWithMsg**"的信号皆是如此。
+- `connectFailed` 和 `loginFailed` 表示执行 `send` 或 `recv` 函数时出现了错误。命名为"xxx**Failed**"的信号皆是如此。
 - `createSocketFailed` 表示创建 socket 失败。
 - `unableToConnectToServer` 表示执行 `connect` 函数时无法连接到服务器。
 
@@ -119,7 +123,7 @@ se->connectAndLogin();
 #### 获取当前目录中的文件名
 `listWorkingDir`
 
-- 可从 `listWorkingDirSucceeded(dirList)` 中得到文件名
+- 可从 `listWorkingDirSucceeded(dirList)` 信号中得到文件名
 - 如果你把参数 `isNameList` 设为 true，那么获得的就不单是文件名，还包括了其他信息，比如下面这样的
 
 ```
@@ -133,7 +137,7 @@ se->connectAndLogin();
 #### 获取当前工作目录
 `getDir`
 
-从 `getDirSucceeded(dir)` 中获取当前工作路径
+从 `getDirSucceeded(dir)` 信号中获取当前工作路径
 
 #### 改变工作目录
 `changeDir`
@@ -147,7 +151,7 @@ se->connectAndLogin();
 #### 获取文件大小
 `getFilesize`
 
-从 `getFilesizeSucceeded(size)` 中获取文件大小，单位：字节
+从 `getFilesizeSucceeded(size)` 信号中获取文件大小，单位：字节
 
 #### 创建目录
 `makeDir`
@@ -155,12 +159,20 @@ se->connectAndLogin();
 #### 删除目录
 `removeDir`
 
-必须先把目录中的文件全部删除，然后才能删目录。递归删除得自己写，这个我没弄。
+必须先把目录中的文件全部删除，然后才能删目录，否则服务器会拒绝删除。递归删除得自己写，这个我没弄。
 
 ## UploadFileTask
 ### 概述
+每个 UploadFileTask 对象都代表着一个上传任务，通过成员函数控制任务的开始、停止、续传。
+
+当任务状态发生变化时，对象会发射信号通知调用方。
+
+你可以创建多个对象，同时上传多个文件。
+
 ### 初始化
-首先创建一个对象，注意参数 `remoteFilepath` 要传入**绝对路径**，要不然文件会存到服务器根目录下。
+首先创建一个对象。
+
+注意参数 `remoteFilepath` 要传入**绝对路径**，要不然文件会存到服务器根目录下。
 
 ```cpp
 std::ifstream ifs(localFilepath, std::ios_base::in | std::ios_base::binary);
@@ -192,7 +204,16 @@ QObject::connect(task, &UploadFileTask::readFileError,
 task->start();
 ```
 
-当上传真正开始时（指发送文件数据到服务器），对象会发射 `uploadStarted` 信号。
+当上传真正开始时（指发送文件内容到服务器），对象会发射 `uploadStarted` 信号。
+
+#### 断点续传
+```cpp
+task->resume(uploadedSize);
+```
+
+用 FTPSession 对象查询一下服务器上的文件大小即可得到 `uploadedSize`。
+
+上传真正开始时也会发射 `uploadStarted` 信号。
 
 #### 停止上传
 ```cpp
@@ -200,9 +221,38 @@ task->stop();
 ```
 
 #### 上传进度
-已上传百分比发生变化时，对象会发射 `uploadPercentage(percentage)` 信号。
+上传过程中，上传百分比发生变化时，对象会发射 `uploadPercentage(percentage)` 信号。
 
 ### 流程图
 ![流程图](pics/UploadFileTask_Flow_Chart.svg)
 
 ## 其他
+### 异步操作
+写了个函数模板，简单封装了一下 `QFuture` 和 `QtConcurrent`，以实现 async-await 的效果。`#include "../include/RunAsyncAwait.h"` 即可使用。
+
+```cpp
+int longTimeWork1(int a, int b) { /*耗时的操作*/ }
+void longTimeWork2(int a, int b) { /*耗时的操作*/ }
+```
+
+对于有返回值的函数，调用时需要**显式指定返回类型**，比如这里的 `<int>`。
+
+```cpp
+int result1 = utils::asyncAwait<int>(longTimeWork1, a, b);
+//后面的代码在 longTimeWork1() 结束后才会执行
+//......
+```
+
+对于无返回值的函数，调用时**不指定返回类型**。
+
+```cpp
+int result2 = utils::asyncAwait(longTimeWork2, a, b);
+//......
+```
+
+### 收取 FTP 报文
+刚开始我写的时候是直接 `recv` 取报文的，然而我忘了 TCP 是面向字节流的协议，不能保证一次读取的是一整条报文……
+
+一条 FTP 消息必定以"\r\n"结尾，利用这个特点写了个工具函数 `utils::recvFtpMsg`，调用一次可保证收取到的是一条完整的 FTP 报文。
+
+`#include "../include/MyUtils.h"` 即可使用。
