--- a/docs/一些说明.md
+++ b/docs/一些说明.md
@@ -43,16 +43,10 @@ QFuture<int> future = QtConcurrent::run(
 while (!future.isFinish())
     QApplication::processEvents();//防止事件循环被卡死
 
-//以下代码在 longTimeWork() 运行结束后才会继续执行
+//以下代码在 longTimeWork() 运行结束后才会执行
 int result = future.result();
 //处理返回的结果……
 ```
-
-尝试用类封装了一下 FTP 的操作。
-
-每个 FTPSession 对象代表着一个 FTP Session。
-
-每个 UploadFileTask 对象代表一个上传任务，因为我感觉对于同一个 FTP Session 可以有多个上传任务同时进行。如果要上传某个文件，就创建一个 UploadFileTask 对象，调用 start() 进行上传。start() 是异步函数，上传结束后，UploadFileTask 对象会发射信号通知调用方。
 
 ## 约定
 头文件放 `./include`，源文件放 `./src`，界面文件放 `./ui`。
