--- a/docs/一些说明.md
+++ b/docs/一些说明.md
@@ -3,23 +3,29 @@
 ### FTP
 - [x] 连接到服务器
 - [x] 登录
-- [x] 切换到被动模式
-- [ ] 读取当前路径
-- [ ] 切换路径
-- [ ] 列出当前目录的文件
-- [ ] 重命名文件
+- [x] 切换 ASCII 和 Binary 传输模式
+- [x] 切换到被动模式（PASV/EPSV）
+- [x] 读取当前路径
+- [x] 切换路径
+- [x] 列出当前目录的文件
+- [x] 创建目录
+- [x] 删除目录
+- [x] 获取文件大小
+- [x] 重命名文件
+- [x] 删除文件
 - 下载文件
     - [ ] 下载文件
     - [ ] 断点续传
     - [ ] 中途停止下载
-    - [ ] 中途暂停下载
 - 上传文件相关
     - [x] 上传文件
-    - [ ] 中途停止上传
-    - [ ] 中途暂停上传
+    - [x] 中途停止上传
+    - [x] 上传进度
+    - [x] 断点续传
 
 
 ### 图形界面
+- [ ] 图形界面
 
 ## 说明
 对于 `FTPFunction.h` 里放的函数，由于访问网络属于耗时操作，所以不能放到主线程运行，否则会卡死界面。
@@ -37,16 +43,10 @@ QFuture<int> future = QtConcurrent::run(
 while (!future.isFinish())
     QApplication::processEvents();//防止事件循环被卡死
 
-//以下代码在 longTimeWork() 运行结束后才会继续执行
+//以下代码在 longTimeWork() 运行结束后才会执行
 int result = future.result();
 //处理返回的结果……
 ```
-
-尝试用类封装了一下 FTP 的操作。
-
-每个 FTPSession 对象代表着一个 FTP Session。
-
-每个 UploadFileTask 对象代表一个上传任务，因为我感觉对于同一个 FTP Session 可以有多个上传任务同时进行。如果要上传某个文件，就创建一个 UploadFileTask 对象，调用 start() 进行上传。start() 是异步函数，上传结束后，UploadFileTask 对象会发射信号通知调用方。
 
 ## 约定
 头文件放 `./include`，源文件放 `./src`，界面文件放 `./ui`。
