--- a/docs/界面文档.md
+++ b/docs/界面文档.md
@@ -2,12 +2,13 @@
 ## MainWindow
 ### 概述
 
-目前和界面有关的所有内容都放在mainwindow文件中。一开始考虑到多线程的原因，新建了一个UserInteraction的文件，但是后来为了方便没有用到。
-（一开始是叫做UserInterface的，编译的时候会发生undefined reference to vtable的错误，后来发现名字改掉就好了。）
+目前和界面有关的所有内容都放在mainwindow文件中。
+
+在Windows显示模式不是100%的电脑上，编译的时候uncomment MainWindows构造函数里关于字体部分的代码，这是因为默认的字体实现方式是pointSize，uncomment之后实现方式为pixelSize，如果字体还有问题就修改一下这里的字号，在我的电脑上基本没问题了。
 
 ### 登录
 
-输入信息后即可登录，登录后显示服务器相关操作，目前发现如果在登录之前点击了那些按钮会闪退。所有经过测试在特定的场景下点击后会闪退的按钮都在不需要用到的时候setVisible(false)；
+输入信息后即可登录，登录后显示服务器相关操作。
 
 ### 使用
 
@@ -15,33 +16,17 @@
 
 ### 删除
 
-删除的时候需要二次确认。
-暂时只写了删除文件的部分。
-如果要实现删除整个目录要调用se->listWorkingList，又要闪退了orz。
-
-### 测试
-
-目前涉及到se->listWorkingList的时候会出现闪退，而且是在发出信号之前，第一次显示目录除外。原因未知。
-（暂时怀疑是信号槽的问题，我没有去改FTPFunction里的函数，不知道这个函数在闪退前运行完了没有。）
-
-目前可正常使用的功能有改变传输方式，新建目录和重命名，但是在刷新目录，即调用se->listWorkingList的时候会闪退。
-
-目录是listView，用QStringListModel初始化，更新Model的数据理论上可同时更新ListView数据，闪退可能和界面有关，这里可能有问题。
-
-其他功能无法正常使用，大多数时候的返回码是550。
-
-几乎所有服务器相关操作在登陆前都会闪退，对按钮做了屏蔽处理。
+删除的时候需要二次确认。暂时只写了删除文件的部分。
 
 ### 其他
 
 在上传和下载的时候考虑了多任务，此时百分比计算方式为sum(percent)/taskCount。
 但是由于目前界面的处理方式，强烈建议只使用单任务上传，多任务的开始和暂停都有点乱，等我解决了目前存在的bug再来考虑更改界面orz。
-写的时候发现由于UploadFileTask不可复制，所以在MainWindow初始化的时候就构建了nullptr，如果要改成多任务这个部分的逻辑要重新修改，大多的下载软件都有最大同时下载数量是不是因为这个（狡辩）。
 
 暂时没有做编码转换，上百度查了一下感觉有点麻烦。
 
 不知道路径中存在中文是否会导致bug，目前的bug全部由英文路径测试产生。
 
-在代码中有的地方只标注了//，这表示可能会存在bug，但是在目前的测试条件下暂未发生，如果出现逻辑bug可以重点看这里的debug信息。
+已知双击文件会产生bug，之后无法对文件进行其他操作。
 
 qt界面部分的编写参考 http://c.biancheng.net/view/1870.html
