--- a/docs/一些说明.md
+++ b/docs/一些说明.md
@@ -13,10 +13,10 @@
 - [x] 获取文件大小
 - [x] 重命名文件
 - [x] 删除文件
-- 下载文件
-    - [ ] 下载文件
-    - [ ] 断点续传
-    - [ ] 中途停止下载
+- 下载文件相关
+    - [x] 下载文件
+    - [x] 断点续传
+    - [x] 中途停止下载
 - 上传文件相关
     - [x] 上传文件
     - [x] 中途停止上传
@@ -25,7 +25,7 @@
 
 
 ### 图形界面
-- [ ] 图形界面
+- [x] 图形界面
 
 ## 说明
 对于 `FTPFunction.h` 里放的函数，由于访问网络属于耗时操作，所以不能放到主线程运行，否则会卡死界面。
