--- a/docs/文档.md
+++ b/docs/文档.md
@@ -208,7 +208,7 @@ task->start();
 
 #### 断点续传
 ```cpp
-task->resume(uploadedSize);
+task->resume();
 ```
 
 用 FTPSession 对象查询一下服务器上的文件大小即可得到 `uploadedSize`。
